--- a/index.html
+++ b/index.html
@@ -32,5 +32,27 @@
             <input type="email">
             <button type="submit">Try it now </button>
         </form>
+        <section>
+            <video controls poster="https://www.aluracursos.com/blog/assets/entienda-el-codigo-binario/banner.jpg">
+                <source type="video/webm"
+                src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm">
+
+                <source type="video/mp4"
+                src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4">
+            </video>
+            <article>
+                <h3>Publish your blog in minutes, not hours</h3>
+                <p>
+                    Your blog is your mos powerful asset to build engage...........
+                </p>
+                <form>
+                    <p>start publishing today</p>
+                    <div>
+                        <input type="text" placeholder="Enter e-mail">
+                        <button>Start my trial</button>
+                    </div>
+                </form>
+            </article>
+        </section>
     </body>
 </html>
